--- a/app/src/main/res/layout/favorites_card_row.xml
+++ b/app/src/main/res/layout/favorites_card_row.xml
@@ -109,9 +109,9 @@
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:clickable="true"
-        android:drawableLeft="@drawable/ic_share_grey600_24dp"
+        android:drawableLeft="@drawable/share_state"
         android:drawablePadding="8dp"
-        android:drawableStart="@drawable/ic_share_grey600_24dp"
+        android:drawableStart="@drawable/share_state"
         android:gravity="center"
         android:padding="@dimen/card_action_button_padding"
         android:text="@string/share_content"
