--- a/app/src/main/res/layout-sw600dp/commodity_list.xml
+++ b/app/src/main/res/layout-sw600dp/commodity_list.xml
@@ -11,7 +11,7 @@
     <!--
     This layout is a two-pane layout for the Commodities
     master/detail flow.
-    
+
     -->
 
     <include layout="@layout/commodity_recycler_view" />
@@ -21,7 +21,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        tools:context="info.santhosh.evlo.ui.CommodityDetailActivity"
-        tools:layout="@layout/commodity_detail"/>
+        tools:context="info.santhosh.evlo.ui.detail.CommodityDetailActivity"
+        tools:layout="@layout/fragment_commodity_detail"/>
 
 </LinearLayout>
