--- a/app/src/main/res/layout/activity_commodity_detail.xml
+++ b/app/src/main/res/layout/activity_commodity_detail.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="info.santhosh.evlo.ui.CommodityDetailActivity"
+    tools:context="info.santhosh.evlo.ui.detail.CommodityDetailActivity"
     tools:ignore="MergeRootFrame">
 
     <android.support.design.widget.AppBarLayout
@@ -38,7 +38,7 @@
         android:id="@+id/commodity_detail_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/commodity_detail"
+        tools:layout="@layout/fragment_commodity_detail"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
