--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,8 @@
     <dimen name="search_toolbar_height">64dp</dimen>
     <dimen name="search_toolbar_margin">8dp</dimen>
     <dimen name="search_title_text_size">14sp</dimen>
+
+    <!--detail divider-->
+    <dimen name="default_divider_height">0.5dp</dimen>
+    <dimen name="default_divider_padding">4dp</dimen>
 </resources>
