--- a/app/src/main/res/layout/commodity_detail_card_row.xml
+++ b/app/src/main/res/layout/commodity_detail_card_row.xml
@@ -10,12 +10,11 @@
         android:id="@+id/text_market_district"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:paddingEnd="4dp"
+        android:paddingEnd="16dp"
         android:paddingLeft="0dp"
-        android:paddingRight="4dp"
+        android:paddingRight="16dp"
         android:paddingStart="0dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
         android:textSize="18sp"
@@ -47,13 +46,26 @@
         android:paddingLeft="0dp"
         android:paddingRight="16dp"
         android:paddingStart="0dp"
-        android:paddingTop="8dp"
+        android:paddingTop="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
+        app:layout_constraintRight_toLeftOf="@+id/text_unit_price"
         app:layout_constraintTop_toBottomOf="@+id/text_market_district"
         tools:text="Andhra Pradesh" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
+        android:id="@+id/text_unit_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="4dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
+        android:text="@string/unit_of_price" />
+
+    <TextView
         android:id="@+id/details_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
