--- a/app/src/main/res/layout/favorites_card_row.xml
+++ b/app/src/main/res/layout/favorites_card_row.xml
@@ -11,32 +11,44 @@
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingEnd="4dp"
-        android:paddingLeft="0dp"
-        android:paddingRight="4dp"
-        android:paddingStart="0dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:maxLines="2"
+        android:paddingEnd="20dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="20dp"
+        android:paddingStart="0dp"
         android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         app:layout_constraintRight_toLeftOf="@+id/text_modal_price"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Arecal betlanut long text lonnng long long long long text lonnng long long long long text lonnng long long long"
-        app:layout_constraintHorizontal_bias="0.0" />
+        tools:text="Arecal betlanut long text lonnng long long long long text lonnng long long long long text lonnng long long long" />
 
     <TextView
         android:id="@+id/text_modal_price"
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         android:textStyle="bold"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="\u20B9 3950" />
+        tools:text="\u20B9 3950"
+        app:layout_constraintBaseline_toBaselineOf="@+id/text_variety" />
+
+    <TextView
+        android:id="@+id/text_unit_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="4dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_modal_price"
+        android:text="@string/unit_of_price" />
 
     <TextView
         android:id="@+id/text_market_district"
@@ -69,21 +81,25 @@
         android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@+id/text_market_district" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <TextView
         android:id="@+id/details_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
         android:drawableLeft="@drawable/more_detail_state"
         android:drawablePadding="8dp"
-        android:text="@string/details_content"
-        android:padding="@dimen/card_action_button_padding"
         android:drawableStart="@drawable/more_detail_state"
-        android:clickable="true"
+        android:padding="@dimen/card_action_button_padding"
+        android:text="@string/details_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        android:textColor="@color/light_grey"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/favorite_icon"
-        app:layout_constraintTop_toBottomOf="@+id/text_state_name"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"/>
+        app:layout_constraintTop_toBottomOf="@+id/text_state_name" />
 
     <TextView
         android:id="@+id/favorite_icon"
@@ -97,10 +113,12 @@
         android:gravity="center"
         android:padding="@dimen/card_action_button_padding"
         android:text="@string/favorite_content"
-        android:textStyle="bold"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:textColor="@color/bookmark_states"
-        app:layout_constraintRight_toLeftOf="@+id/share_icon"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/details_icon"
+        app:layout_constraintRight_toLeftOf="@+id/share_icon"
         app:layout_constraintTop_toTopOf="@+id/details_icon" />
 
     <TextView
@@ -115,9 +133,12 @@
         android:gravity="center"
         android:padding="@dimen/card_action_button_padding"
         android:text="@string/share_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+        android:textColor="@color/light_grey"
+        android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/favorite_icon"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/details_icon" />
 
     <android.support.constraint.Guideline
