--- a/app/src/main/res/layout/favorites_list.xml
+++ b/app/src/main/res/layout/favorites_list.xml
@@ -39,4 +39,13 @@
             android:text="@string/bookmark_empty"
             android:textAppearance="@style/TextAppearance.AppCompat.Small" />
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 </FrameLayout>
