--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto/android">
 
+  <item android:id="@+id/faq"
+      android:title="@string/faq"
+      app:showAsAction="ifRoom" />
   <item android:id="@+id/settings"
     android:title="@string/settings"
     app:showAsAction="never" />
