--- a/app/src/main/res/drawable/ic_expand_more_grey.xml
+++ b/app/src/main/res/drawable/ic_expand_more_grey.xml
@@ -3,7 +3,13 @@
         android:height="24dp"
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
-    <path
-        android:fillColor="@color/light_grey"
-        android:pathData="M16.59,8.59L12,13.17 7.41,8.59 6,10l6,6 6,-6z"/>
+    <group
+        android:name="arrow"
+        android:pivotX="11.5"
+        android:pivotY="11.5"
+        android:rotation="0">
+        <path
+            android:fillColor="@color/light_grey"
+            android:pathData="M16.59,8.59L12,13.17 7.41,8.59 6,10l6,6 6,-6z"/>
+    </group>
 </vector>
