--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -42,6 +42,13 @@
             android:visibility="gone"
             tools:text='No search results for "Apple"'
             tools:visibility="visible" />
+
+        <ProgressBar
+            android:id="@+id/progressBarSearch"
+            android:layout_marginTop="40dp"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </FrameLayout>
 
 </LinearLayout>
