--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    style="@style/container_tablet_bg"
     android:orientation="vertical">
     <FrameLayout
         android:id="@+id/main_holder"
@@ -17,7 +16,7 @@
         <info.santhosh.evlo.ui.main.SearchToolbar
             android:id="@+id/main_toolbar"
             app:title="@string/search_hint"
-            app:titleTextAppearance="@style/SearchToolbar.TitleText"
+            app:titleTextAppearance="@style/SearchToolbar_TitleText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -27,9 +26,8 @@
 
     <FrameLayout
         android:id="@+id/main_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:background="@color/cardview_shadow_start_color">
-    </FrameLayout>
+        android:background="@android:color/white"
+        style="@style/container_tablet_constrain"
+        tools:background="@color/cardview_shadow_start_color"/>
 </LinearLayout>
 
