--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -2,21 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    style="@style/container_tablet_bg"
     android:orientation="vertical">
 
-    <info.santhosh.evlo.ui.search.Searchbar
-        android:id="@+id/search_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/search_toolbar_height"
+    <FrameLayout
+        android:background="@android:color/white"
         android:elevation="4dp"
-        android:gravity="top" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <info.santhosh.evlo.ui.search.Searchbar
+            android:id="@+id/search_toolbar"
+            style="@style/SearchToolbar_Container" />
+    </FrameLayout>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:background="@color/almostWhite"
-        android:layout_height="match_parent">
+        style="@style/container_tablet_constrain"
+        android:background="@android:color/white">
         <info.santhosh.evlo.widget.EmptyRecyclerView
             android:id="@+id/commodity_list"
             android:layout_width="match_parent"
