--- a/app/src/main/res/layout/commodity_detail_card_row_more.xml
+++ b/app/src/main/res/layout/commodity_detail_card_row_more.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/text_market_district"
+        android:id="@+id/text_market"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
@@ -18,11 +18,27 @@
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Chirala market, Prakasam district"
+        tools:text="Chirala market"
         android:layout_marginTop="16dp"
         android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <TextView
+        android:id="@+id/text_district"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:maxLines="1"
+        android:paddingEnd="16dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="16dp"
+        android:paddingStart="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/text_market"
+        tools:text="Prakasam district"
+        app:layout_constraintRight_toLeftOf="@+id/text_unit_price" />
 
     <TextView
         android:id="@+id/text_state_name"
@@ -39,7 +55,7 @@
         tools:text="Andhra Pradesh"
         app:layout_constraintHorizontal_bias="0.0"
         android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/text_market_district"
+        app:layout_constraintTop_toBottomOf="@+id/text_district"
         android:layout_marginRight="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent" />
